--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.1",
     "intl": "^1.2.5",
+    "ng2-currency-mask": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
