--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.5.0",
     "intl": "^1.2.5",
+    "lru-cache": "^6.0.0",
     "ng2-currency-mask": "^11.0.0",
     "ngx-mask": "^12.0.0",
     "rxjs": "~6.6.0",
