--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
     "intl": "^1.2.5",
     "lru-cache": "^6.0.0",
