--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ng2-currency-mask": "^11.0.0",
     "ngx-mask": "^12.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
