--- a/package.json
+++ b/package.json
@@ -23,19 +23,25 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "html2pdf.js": "^0.10.1",
     "intl": "^1.2.5",
+    "jspdf": "^2.4.0",
     "lru-cache": "^6.0.0",
     "ng2-currency-mask": "^11.0.0",
     "ngx-mask": "^12.0.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.5",
     "tslib": "^2.0.0",
+    "xlsx": "^0.17.2",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
