--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
+    "commonjs": "0.0.1",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
