cadastro de produto

--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "baseHref": "/sique-gesso/",
+              "baseHref": "/",
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
