--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lru-cache": "^6.0.0",
     "ng2-currency-mask": "^11.0.0",
     "ngx-mask": "^12.0.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
     "sweetalert2": "^11.1.5",
     "tslib": "^2.0.0",
     "xlsx": "^0.17.2",
