--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "angular-input-masks": "^4.4.1",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
     "commonjs": "0.0.1",
