--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "@types/chartjs": "0.0.27-alpha",
     "angular-input-masks": "^4.4.1",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
+    "chart.js": "^2.9.4",
     "commonjs": "0.0.1",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
@@ -31,6 +33,8 @@
     "intl": "^1.2.5",
     "jspdf": "^2.4.0",
     "lru-cache": "^6.0.0",
+    "ng-chartjs": "^0.2.2",
+    "ng2-charts": "^2.4.3",
     "ng2-currency-mask": "^11.0.0",
     "ngx-mask": "^12.0.0",
     "rxjs": "^6.6.7",
@@ -43,6 +47,7 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@types/chart.js": "^2.9.31",
     "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
