--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ng2-charts": "^2.4.3",
     "ng2-currency-mask": "^11.0.0",
     "ngx-mask": "^12.0.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "^6.6.7",
     "sweetalert2": "^11.1.5",
     "tslib": "^2.0.0",
