--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "lru-cache": "^6.0.0",
     "moment": "^2.29.1",
     "ng-chartjs": "^0.2.2",
-    "ng2-charts": "^2.4.3",
+    "ng2-charts": "^2.4.2",
     "ng2-currency-mask": "^11.0.0",
+    "ng2-google-charts": "^7.0.0",
     "ngx-mask": "^12.0.0",
     "ngx-pagination": "^5.1.1",
     "rxjs": "^6.6.7",
