--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ngx-mask": "^12.0.0",
     "ngx-pagination": "^5.1.1",
     "rxjs": "^6.6.7",
+    "socket.io-client": "^4.4.1",
     "sweetalert2": "^11.1.5",
     "tslib": "^2.0.0",
     "xlsx": "^0.17.2",
