--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
     "@types/chart.js": "^2.9.31",
+    "@types/crypto-js": "^4.1.1",
     "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
