--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@types/chartjs": "0.0.27-alpha",
     "angular-input-masks": "^4.4.1",
+    "angular2-csv": "^0.2.9",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
     "chart.js": "^2.9.4",
